--- a/style.css
+++ b/style.css
@@ -5,12 +5,22 @@
 }
 :root{
     font-family: "Alice", serif;
-    line-height: 140%;
+    line-height: 150%;
     color: #573A37;
 }
 body{
     background-image: url(assets/bg.jpg);
     background-size: cover;
+}
+main{
+    padding: 24px;
+}
+section + + section{
+    margin-top: 24px;
+}
+#about p +p{
+    margin-top: 12px;
+
 }
 #page{
     width: 800px;
@@ -21,14 +31,23 @@ body{
 }
 img{
     border-radius: 16px;
+    height: 400px;
+    width: 100%;
+    
 }
 h1{
     line-height: 140%;
     font-size: 40px;
+   
 }
 h2{
     font-size: 24px;
 }
 h1, h2{
     color: #291B1A;
+    margin-bottom: 4px;
+    line-height: 150%;
+}
+ul{
+    padding-left: 24px;
 }
