--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 main{
     padding: 24px;
 }
-section + + section{
+section + section{
     margin-top: 24px;
 }
 #about p +p{
@@ -27,7 +27,7 @@ section + + section{
     padding: 24px;
     background-color: #F0E8C2;
     border-radius: 24px;
-    margin: 48px auto;
+    margin: 48px auto 28px;
 }
 img{
     border-radius: 16px;
@@ -50,4 +50,15 @@ h1, h2{
 }
 ul{
     padding-left: 24px;
+}
+footer{
+    color: #F0E8C2;
+    text-align: center;
+    padding-bottom: 48px;
+}
+footer img{
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+
 }
